move the faq into the profile and clean up some spacing issues. Give it a title too

--- a/static/css/gateway.css
+++ b/static/css/gateway.css
@@ -142,3 +142,8 @@
 .tab-display {
     z-index: 3000;
 }
+
+.sub-title {
+    color: #666;
+    font-size: 15px;
+}
